fixed minor alignment issue on finder

--- a/client/ide/styl/ide.finder.styl
+++ b/client/ide/styl/ide.finder.styl
@@ -24,7 +24,7 @@ body.ide
 
   .kdlistitemview-finderitem
     height              auto
-    min-height          23px
+    min-height          24px
     font-size           13px
     color               #D4CFC9
     background-color    transparent
@@ -112,7 +112,7 @@ body.ide
         bg            position, -62px -242px
 
     > div
-      line-height       23px
+      line-height       24px
       height            100%
       width             auto
       .title
@@ -129,7 +129,7 @@ body.ide
 
       input.kdinput.text
         margin          2px 5px 0 0
-        height          23px
+        height          24px
         line-height     1em
         border          none
         shadow          none
@@ -148,7 +148,7 @@ body.ide
         fl()
 
       &.rename-container
-        height        23px
+        height        24px
         padding-right 25px
         input.hitenterview
           bg          image, none
@@ -229,6 +229,7 @@ body.ide
         padding           0
         margin            0
         float             none
+        vertical-align    sub
 
       &:active
       &:focus
@@ -247,14 +248,13 @@ body.ide
 
       span.icon
       span.path-select
-        margin            6px 2px 0
+        margin            4px 2px 0 2px
         size              16px 16px
 
     .folder
       span.icon
       span.path-select
         margin            4px 0 0 0px
-        size              16px 16px
 
     .vm
       margin              13px 16px 5px !important
