--- a/client/ide/styl/ide.styl
+++ b/client/ide/styl/ide.styl
@@ -154,6 +154,8 @@ body.ide.dark
       display           inline-block
       r-sprite          'ide', 'add-vm'
       float             none
+      vertical-align    sub
+      margin-right      4px
 
 
 
